--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,6 +38,10 @@ jobs:
       - name: Install dependencies
         run: pip3 install -r requirements.txt
 
+      # Install libreoffice
+      - name: Install libreoffice
+        run: sudo apt-get install -y libreoffice
+
       # Running all tests
       - name: Running tests
         run: python3 -m unittest discover -s ./src -p '*_test.py'
